--- a/swapi-hal-server/package.json
+++ b/swapi-hal-server/package.json
@@ -2,8 +2,9 @@
   "name": "aot-presentation-server",
   "version": "0.1.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
+    "start": "nodemon .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "generate-yaml": "node ./scripts/generate-yaml",
     "generate-yaml:watch": "nodemon --ignore generated/ ./scripts/generate-yaml"
@@ -11,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.16.2",
     "express": "^4.16.1",
     "js-yaml": "^3.10.0",
     "lodash": "^4.17.4"
