--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "test": "lerna run test"
   },
   "dependencies": {
-    "lerna": "^2.4.0",
-    "npm-run-all": "^4.1.1"
+    "lerna": "^2.4.0"
   }
 }
