--- a/packages/swapi-hal-server/package.json
+++ b/packages/swapi-hal-server/package.json
@@ -10,8 +10,8 @@
     "start": "node .",
     "watch": "nodemon .",
     "build": "npm run -s generate-yaml",
-    "generate-yaml": "node ./scripts/generate-yaml",
-    "generate-yaml:watch": "nodemon --ignore generated/ ./scripts/generate-yaml"
+    "generate-yaml": "mkdir -p generated && node ./scripts/generate-yaml",
+    "generate-yaml:watch": "mkdir -p generated && nodemon --ignore generated/ ./scripts/generate-yaml"
   },
   "dependencies": {
     "axios": "^0.16.2",
